[package]
name = "rust_template"
version = "0.1.0"
authors = ["spotlesscoder <codingspiderfox@gmail.com>"]
edition = "2021"

[lib]
path ="./src/lib/lib.rs"

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
